Fix the vertical scrollbar

--- a/Code/Source/styles/style.css
+++ b/Code/Source/styles/style.css
@@ -1,13 +1,16 @@
-::-webkit-scrollbar
-{
-  width: 8px;
-  background-color: #F5F5F5;
+/* Custom ScrollBar */
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
 }
 
-::-webkit-scrollbar-thumb
-{
-  background-color: #8a8a8a;
-  border-radius: 5px;
+::-webkit-scrollbar-thumb {
+    background-color: #8a8a8a;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-corner {
+    background-color: inherit;
 }
 
 * {
